NXP-32866: Split Audit for more modularity